# Badg3rFuzz

./: .bandit  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  badg3rfuzz.py  bandit.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  security_report.yml
.github/workflows/: python-app.yml
scripts/: security-check.sh  setup-test-env.sh
tests/: conftest.py  test_check_success.py  test_core_functions.py  test_error_handling.py  test_main.py  test_network_security.py  test_pem_handling.py  test_rate_limiting.py  test_utils.py  test_webdriver.py  test_webdriver_integration.py  test_workers.py
tests/integration/: test_check_success.py  test_check_success_integration.py  test_full_workflow.py  test_login_attempt.py  test_main_entrypoint.py  test_token_cookie_generation.py
tests/performance/: test_benchmarks.py
tests/security/: test_input_validation.py
tests/unit/: test_check_success_unit.py
