[build-system]
requires = ["hatchling>=1.13.0"]
build-backend = "hatchling.build"

[project]
name = "badg3rfuzz"
version = "1.0.0"
description = "Security auditing tool for automated brute force and fuzzing with reCAPTCHA bypass"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "CyberSec Auditor", email = "security@company.com"}
]
maintainers = [
    {name = "Security Team", email = "security@company.com"}
]
keywords = ["security", "penetration-testing", "brute-force", "fuzzing", "recaptcha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "webdriver-manager>=4.0.0",
    "urllib3>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "requests-mock>=1.11.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "memory-profiler>=0.61.0",
    "semgrep>=1.45.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "requests-mock>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/company/badg3rfuzz"
Repository = "https://github.com/company/badg3rfuzz.git"
Documentation = "https://badg3rfuzz.readthedocs.io"
"Bug Tracker" = "https://github.com/company/badg3rfuzz/issues"

[project.scripts]
badg3rfuzz = "badg3rfuzz:main"

[tool.hatch.build.targets.wheel]
packages = ["src/badg3rfuzz"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "README.md",
    "LICENSE",
]

# Configuración de herramientas adicionales
[tool.pylint]
max-line-length = 120
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "import-error",
]

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0111",  # Missing docstring
    "R0903",  # Too few public methods
    "W0613",  # Unused argument
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601", "B602"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]